# bistro-Backend

./: .dockerignore  .env  README.md  db.sqlite3  db.sqlite3.bak  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
cart/: models.py  serializers.py  tests.py  urls.py  views.py
cart/migrations/: 0001_initial.py
core/: settings.py  urls.py
menu/: models.py  serializers.py  tests.py  urls.py  views.py
menu/migrations/: 0001_initial.py
order/: models.py  serializers.py  tests.py  urls.py  views.py
order/migrations/: 0001_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
